--- a/src/html/partials/panel-code-template.html
+++ b/src/html/partials/panel-code-template.html
@@ -1,3 +1,3 @@
-<pre class="language-markup">
+<pre class="language-markup code-block">
   <code id="sg-code-fill-{{ language }}" class="language-{{ language }}">{{{ code }}}</code>
 </pre>
