--- a/src/sass/styleguide.scss
+++ b/src/sass/styleguide.scss
@@ -1451,3 +1451,272 @@ $sg-border-radius-med : 6px;
     margin-bottom: 0.25em;
   }
 }
+
+/* Dan's World */
+
+$color-copy: #3C4858;
+$color-meta: #CFDBE6;
+$color-label: #FAA41B;
+$color-border: #EAF2F6;
+
+body {
+  color: $color-copy;
+  font-family: 'Avenir Next', 'Avenir', sans-serif;
+  font-size: 62.5%;
+}
+
+.pull-left {
+  float: left;
+}
+.pull-right {
+  float: right;
+}
+.text-left {
+  text-align: left;
+}
+.text-right {
+  text-align: right;
+}
+
+@mixin clearfix {
+  &:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+}
+
+aside.sidebar {
+  background-color: #00A5E6;
+  background-image: linear-gradient(#00A5E6, #375F82);
+  color: white;
+  font-size: 1em;
+  height: 100%;
+  left: 0;
+  padding: 6rem 0;
+  position: fixed;
+  top: 0;
+  width: 245px;
+  .logo {
+    margin-bottom: 50px;
+    text-align: center;
+  }
+  ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  & > ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    & > li {
+      span {
+        border-left: 3px solid transparent;
+        border-right: 3px solid transparent;
+        display: inline-block;
+        font-weight: 500;
+        letter-spacing: 0.1rem;
+        line-height: 2em;
+        margin-bottom: 5px;
+        padding: 0 35px;
+        opacity: 0.5;
+      }
+      & > ul {
+        margin-bottom: 50px;
+        & > li {
+          font-size: 1.4em;
+          // font-weight: 300;
+          letter-spacing: 0.1rem;
+          line-height: 2.4rem;
+          a {
+            border-left: 3px solid transparent;
+            border-right: 3px solid transparent;
+            color: inherit;
+            display: block;
+            padding: 0 35px;
+            text-decoration: none;
+            transition: background 200ms ease-in-out, border 300ms ease-in-out;
+            &:hover,
+            &.active {
+              background: rgba(white, 0.1);
+              border-left-color: white;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+main.content {
+  padding-bottom: 200px;
+  padding-left: 245px;
+  @media screen and (max-width: 2560px) {
+    .container {
+      max-width: 1100px;
+    }
+  }
+  @media screen and (max-width: 1280px) {
+    .container {
+      max-width: 800px;
+    }
+  }
+  section {
+    .section-header {
+      @include clearfix;
+      border-bottom: 1px solid $color-meta;
+      line-height: 5rem;
+      margin: 5rem 0 2rem;
+      h1 {
+        font-weight: 400;
+        font-size: 4em;
+        margin: 0;
+      }
+      span {
+        color: #CFDBE6;
+        font-weight: 500;
+        letter-spacing: 0.1rem;
+        text-transform: uppercase;
+      }
+    }
+    .section-label {
+      color: $color-label;
+      font-size: 2em;
+      line-height: 3rem;
+      letter-spacing: 0.05rem;
+    }
+    & + section {
+      margin-top: 3rem;
+    }
+    p {
+      letter-spacing: 0.01em;
+      font-size: 0.9rem;
+      line-height: 1.4rem;
+      margin: (1.4rem * 2) 0;
+    }
+  }
+}
+
+figure.well {
+  border: 1px solid $color-border;
+  border-radius: 4px;
+  margin: 0;
+  overflow: hidden;
+  padding: 0;
+  position: relative;
+  // padding: 20px;
+  .figure-action {
+    cursor: pointer;
+    font-size: 8px;
+    font-weight: 500;
+    letter-spacing: 0.2em;
+    right: 0;
+    opacity: 0;
+    line-height: 4em;
+    padding: 0 10px;
+    position: absolute;
+    transition: opacity 200ms ease;
+  }
+  &:hover .figure-action {
+    opacity: 0.5;
+    &:hover {
+      opacity: 1;
+    }
+  }
+  .figure-content {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    padding: 32px 20px;
+  }
+  .figure-description {
+    align-items: center;
+    background-color: #F8F9FA;
+    border-top: 1px solid $color-border;
+    padding: 16px;
+    .figure-class {
+      font-size: 1.4em;
+    }
+    .figure-info {
+      font-size: 1.2em;
+      opacity: 0.7;
+      text-align: right;
+    }
+  }
+}
+
+figure.color {
+  border: 1px solid $color-border;
+  border-radius: 2px;
+  margin: 0;
+  overflow: hidden;
+  padding: 0;
+  .figure-content {
+    height: 60px;
+  }
+  .figure-description {
+    align-items: center;
+    border-top: 1px solid $color-border;
+    padding: 12px 16px;
+    .figure-class {
+      flex-grow: 2;
+      font-weight: 500;
+      font-size: 1.2em;
+    }
+    .figure-info {
+      flex-grow: 1;
+      font-size: 1.3em;
+      text-align: right;
+      pre {
+        font-family: inherit;
+        margin: 0;
+      }
+    }
+  }
+}
+
+
+code,
+code.hljs {
+  background-color: #F8F9FA;
+  border: 1px solid $color-border;
+  border-radius: 4px;
+  display: block;
+  font-size: 1.2em;
+  padding: 16px;
+}
+
+pre.code-block {
+  max-height: 0;
+  overflow: hidden;
+  opacity: 0;
+  transition: max-height 300ms ease-in-out, opacity 300ms ease;
+  &.in {
+    opacity: 1;
+    max-height: 400px;
+  }
+}
+
+.container {
+  margin: 0 auto;
+  padding: 0 15px;
+  & > .columns > [class^='col'] {
+    margin-bottom: 16px;
+  }
+  .columns + .columns {
+    margin-top: 1rem;
+  }
+}
+
+input {
+  border: 1px solid $color-meta;
+  border-radius: 2px;
+  outline: 0;
+  padding: 10px 15px;
+  transition: border 300ms ease;
+  &:hover {
+    border: 1px solid darken($color-meta, 20%);
+  }
+  // width: 100%;
+}
