--- a/src/sass/styleguide.scss
+++ b/src/sass/styleguide.scss
@@ -662,7 +662,7 @@ $sg-border-radius-med : 6px;
   text-align: center;
   width: 100%;
   position: fixed;
-  top: $offset-top;
+  top: 0;
   bottom: 0;
   left: 0;
   right: 0;
@@ -1411,6 +1411,7 @@ aside.sidebar {
   position: fixed;
   top: 0;
   width: 245px;
+  z-index: 9999;
   .logo {
     margin-bottom: 50px;
     text-align: center;
