--- a/src/sass/styleguide.scss
+++ b/src/sass/styleguide.scss
@@ -691,7 +691,7 @@ $sg-border-radius-med : 6px;
   height: 100%;
   position: relative;
   text-align: center;
-  margin: 0 auto;
+  margin: 0;
   -webkit-overflow-scrolling: touch;
   overflow-y: auto;
   overflow-x: hidden;
