--- a/src/sass/styleguide.scss
+++ b/src/sass/styleguide.scss
@@ -692,6 +692,7 @@ $sg-border-radius-med : 6px;
   position: relative;
   text-align: center;
   margin: 0;
+  left: 245px;
 }
 
 /**
@@ -707,7 +708,7 @@ $sg-border-radius-med : 6px;
   margin: 0;
   top: 0;
   bottom: 0;
-  left: 245px;
+  left: 0;
   right: 0;
   background-color: white;
 
