--- a/src/sass/styleguide.scss
+++ b/src/sass/styleguide.scss
@@ -1372,18 +1372,8 @@ aside.sidebar {
 }
 
 main.content {
-  padding-bottom: 200px;
+  padding: 0 0 200px;
   // padding-left: 245px;
-  @media screen and (max-width: 2560px) {
-    .container {
-      max-width: 1100px;
-    }
-  }
-  @media screen and (max-width: 1280px) {
-    .container {
-      max-width: 800px;
-    }
-  }
   section {
     .section-header {
       @include clearfix;
